--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ FIREBASE_AUTH_DOMAIN=outshifter-qa.firebaseapp.com
 FIREBASE_DATABASE_URL=https://outshifter-qa.firebaseio.com
 FIREBASE_STORAGE_BUCKET=outshifter-qa.appspot.com
 FIREBASE_MESSAGING_SENDER_ID=197176618277
+
+
+SKIP_PREFLIGHT_CHECK=true
