--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-virtualized-image-measurer": "^0.4.0",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^0.16.0",
     "reselect": "^4.0.0",
     "socket.io-client": "^2.2.0",
@@ -54,7 +55,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -72,5 +73,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.12"
   }
 }
